syntax = "proto3";
package base_response;

message BaseResponse {
  bool success = 1;                 // 返回结果
  string error_desc = 2;            // 错误描述
}